syntax = "proto3";
package books;

option go_package = "github.com/dittrichlucas/poc-grpc-bookstore";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse { string access_token = 1; }

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {};
}
